# TP-Blockchain

./: README.md  noxfile.py  pyproject.toml
src/btctoy/: __main__.py  codec.py
src/btctoy/crypto/: __init__.py  prime.py  types.py
src/btctoy/script/: __init__.py  op.py
src/btctoy/tx/: __init__.py
src/btctoy/utils/: cli.py  logging.py
tests/: __init__.py  conftest.py  test_crypto_elliptic_curve_point.py  test_crypto_elliptic_curve_point_modular_field.py  test_crypto_modular_field_integer.py  test_crypto_private_key.py  test_crypto_s256point.py  test_crypto_utils.py  test_script.py  test_script_op.py  test_tx.py  test_version.py
